--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "login-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://garfieldmsb.github.io/login-backend/",
+  "homepage": "https://garfieldmsb.github.io/login-frontend/",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
